<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="79dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.constraint.Guideline
                android:id="@+id/guideline_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="24dp" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline_middle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="24dp" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline_middle_h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="15dp" />

            <EditText
                android:id="@+id/firstname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/et_bg"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:padding="16dp"
                android:textColorHint="@color/login_form_details"
                app:layout_constraintEnd_toStartOf="@id/guideline_middle"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/lastname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/et_bg"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:padding="16dp"
                android:textColorHint="@color/login_form_details"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@id/guideline_middle"
                app:layout_constraintTop_toTopOf="parent"

                />

            <EditText
                android:id="@+id/nickname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="@drawable/et_bg"
                android:hint="@string/nickname"
                android:inputType="textPersonName"
                android:padding="16dp"
                android:textColorHint="@color/login_form_details"
                app:layout_constraintEnd_toStartOf="@id/guideline_right"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/firstname" />

            <EditText
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="@drawable/et_bg"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:textColorHint="@color/login_form_details"
                app:layout_constraintEnd_toStartOf="@id/guideline_right"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/nickname" />

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/et_bg"
                android:drawableEnd="@drawable/ic_eye"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColorHint="@color/login_form_details"
                app:layout_constraintEnd_toStartOf="@id/guideline_middle"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <EditText
                android:id="@+id/passwordcheck"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/et_bg"
                android:hint="@string/repassword"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColorHint="@color/login_form_details"
                app:layout_constraintEnd_toStartOf="@id/guideline_right"
                app:layout_constraintStart_toStartOf="@id/guideline_middle"
                app:layout_constraintTop_toBottomOf="@id/email"

                />

            <EditText
                android:id="@+id/birth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/et_bg"
                android:hint="@string/birth"
                android:inputType="number"
                android:padding="16dp"
                android:textColorHint="@color/login_form_details"
                app:layout_constraintEnd_toStartOf="@id/guideline_middle"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/passwordannounce2" />

            <TextView
                android:id="@+id/whenbirth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/whenbirth"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/birth"
                app:layout_constraintTop_toBottomOf="@+id/passwordannounce" />


            <TextView
                android:id="@+id/passwordannounce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/Input_password"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/password" />


            <TextView
                android:id="@+id/passwordannounce2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/mismatch"
                android:textColor="#D84315"
                app:layout_constraintStart_toStartOf="@id/guideline_middle"
                app:layout_constraintTop_toBottomOf="@+id/password" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/et_bg"
                android:hint="@string/phone"
                android:inputType="phone"
                android:maxLength="14"
                android:padding="16dp"
                android:textColorHint="@color/login_form_details"
                app:layout_constraintEnd_toStartOf="@id/guideline_middle"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/birth" />

            <TextView
                android:id="@+id/whatphone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/whatphone"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/phone"
                app:layout_constraintTop_toBottomOf="@+id/birth" />

            <EditText
                android:id="@+id/state"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/et_bg"
                android:hint="@string/state"
                android:inputType="text"
                android:padding="16dp"
                android:textColorHint="@color/login_form_details"
                app:layout_constraintEnd_toStartOf="@id/guideline_middle"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/phone" />

            <TextView
                android:id="@+id/whatstate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/whatstate"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/state"
                app:layout_constraintTop_toBottomOf="@+id/phone" />

            <EditText
                android:id="@+id/city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/et_bg"
                android:hint="@string/city"
                android:inputType="text"
                android:padding="16dp"
                android:textColorHint="@color/login_form_details"
                app:layout_constraintEnd_toStartOf="@id/guideline_middle"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/state" />

            <TextView
                android:id="@+id/whatcity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/whatcity"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/city"
                app:layout_constraintTop_toBottomOf="@+id/state" />



            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toStartOf="@id/guideline_right"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/city">

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/female"
                    app:layout_constraintStart_toStartOf="@id/guideline_left"
                    app:layout_constraintTop_toBottomOf="@+id/city" />

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:text="@string/male"
                    app:layout_constraintStart_toStartOf="@id/guideline_middle"
                    app:layout_constraintTop_toBottomOf="@+id/city" />

            </RadioGroup>

            <Button
                android:id="@+id/submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/bg_login2"
                android:text="@string/create"
                android:textColor="@color/login_form_details"
                app:layout_constraintEnd_toStartOf="@id/guideline_right"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@id/gender"
                app:layout_constraintBottom_toBottomOf="parent"
                />


        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
